--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -61,7 +61,7 @@
                                 <i class="fas fa-spinner fc-white center-abs"></i>
                             </span>
                             <div class="notification">
-                                <i class="far fa-comment-alt"></i>
+                                <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
                                     <span>{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
@@ -107,7 +107,7 @@
                             <h6>{{ project.project_form.project_title_persian }}</h6>
                             <span class="active-status"></span>
                             <div class="notification">
-                                <i class="far fa-comment-alt"></i>
+                                <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
                                     <span>{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
@@ -182,7 +182,7 @@
                             <h6>{{ project.project_form.project_title_persian }}</h6>
                             <span class="reject-status"></span>
                             <div class="notification">
-                                <i class="far fa-comment-alt"></i>
+                                <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
                                     <span>{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
@@ -248,7 +248,7 @@
                                 <i class="fas fa-check center-abs fc-white"></i>
                             </span>
                             <div class="notification">
-                                <i class="far fa-comment-alt"></i>
+                                <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
                                     <span>{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
