--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="chamran_btn ch-form-submit">
+                <button type="submit" class="form-submit">
                     <i class="fas fa-check"></i>
                     افزودن پروژه
                 </button>
