--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -134,7 +134,10 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="chamran_btn" style="left: 0;bottom: 0">ذخیره تغییرات</button>
+                <button type="submit" class="form-submit">
+                    <i class="fas fa-check"></i>
+                    ذخیره تغییرات
+                </button>
             </form>
         </div>
     </div>
