--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -787,7 +787,10 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="chamran_btn" style="left: 0;bottom: -1px;">اعمال تغییرات</button>
+                <button type="submit" class="form-submit">
+                    <i class="fas fa-check"></i>
+                    اعمال تغییرات
+                </button>
             </form>
         </div>
     </div>
