--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/comments.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'expert/css/style_xs.css' %}">
+    {#    <link rel="stylesheet" href="{% static 'expert/css/style_xs.css' %}">#}
 </head>
 <body>
 {#  {% include 'expert/layouts/pageLoader.html' %}#}
@@ -40,11 +40,12 @@
             </button>
             <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
                 <li><a href="{% url 'expert:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
-                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
+                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-lock"></i></a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
             </ul>
         </div>
+        <a href="#" id="toggle"><span></span></a>
     </div>
     <div class="content">
         <div class="container">
@@ -63,11 +64,11 @@
                  height="150px">
         {% endif %}
         <h5>{% block name %}{% endblock %}</h5>
-        <h6>استاد</h6>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ request.user.expertuser.expert_point|default:3 }}</span>/10</p>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز:
+            <span>{{ request.user.expertuser.expert_point|default:3 }}</span>/10</p>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: {{request.user.expertuser.score}}px">
+                 aria-valuemax="100" style="width: {{ request.user.expertuser.score }}px">
                 <span class="sr-only">{{ score|default:0 }}% completed</span>
             </div>
         </div>
@@ -120,8 +121,26 @@
                 </li>
             </a>
         </ul>
+        <div class="hr display-sm"></div>
+        <ul class="list-group display-sm">
+            <a href="{% url 'chamran:send_reset_email' %}">
+                <li class="list-group-item text-right">
+                    <div>
+                        <span>تغییر رمز عبور</span>
+                        <i class="fas fa-lock"></i>
+                    </div>
+                </li>
+            </a>
+            <a href="{% url 'chamran:logout' %}">
+                <li class="list-group-item text-right">
+                    <div>
+                        <span>خروج</span>
+                        <i class="fas fa-sign-out-alt"></i>
+                    </div>
+                </li>
+            </a>
+        </ul>
     </div>
-    <a href="#" id="toggle"><span></span></a>
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 {#<script type="text/javascript" src="{% static 'expert/js/pageLoader.js' %}"></script>#}
