--- a/expert/templates/expert/layouts/add_new_question.html
+++ b/expert/templates/expert/layouts/add_new_question.html
@@ -1,7 +1,7 @@
 {% load static%}
 {% load widget_tweaks %}
 <div class="fixed-back add-question">
-    <div class="card text-right">
+    <div class="card text-right b-x2">
         <div class="close"></div>
         <div class="card-head">ثبت سوال جدید</div>
         <div class="container">
