--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -25,19 +25,19 @@
                             <span class="title">نحوه ثبت تکنیک</span>
                             <div class="radio-group row">
                             <div class="technique_validation"></div>
-                                <div class="form-group col-lg-4 col-md-4">
+                                <div class="form-group col-md-4">
                                     <input class="close-upload" type="radio" name="confirmation_method" id="exam" value="exam" hidden>
                                     <label for="exam">
                                         <div class="title">درخواست آزمون آنلاین</div>
                                     </label>
                                 </div>
-                                <div class="form-group col-lg-4 col-md-4">
+                                <div class="form-group col-md-4">
                                     <input class="upload-file" type="radio" name="confirmation_method" id="upload-s" value="certificant" hidden>
                                     <label for="upload-s">
                                         <div class="title">آپلود گواهی نامه</div>
                                     </label>
                                 </div>
-                                <div class="form-group col-lg-4 col-md-4">
+                                <div class="form-group col-md-4">
                                     <input class="upload-file" type="radio" name="confirmation_method" id="article" value="paper" hidden>
                                     <label for="article">
                                         <div class="title">آپلود مقاله</div>
