change page ui and cards 5

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="box-body">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6 col-9">
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="date text-center">
@@ -76,7 +76,7 @@
                                 {#                                        class="num">0</span></i>#}
                                 {#                                </div>#}
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6 col-3">
                                 <button class="default-btn preview-project" id="1"
                                         data-url="{% url 'expert:show_project' %}">
                                     مشاهده
