--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="box-body">
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-md-6 col-8">
                                     <div class="row">
                                         <div class="col-6">
                                             <div class="text-center">
@@ -139,7 +139,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-md-6 col-4">
                                     <button class="chamran-btn-info default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
