--- a/expert/templates/expert/questions.html
+++ b/expert/templates/expert/questions.html
@@ -55,7 +55,7 @@
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-9">
                                             <div class="row">
                                                 <div class="col-6">
                                                     <div class="date text-center">
@@ -77,7 +77,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-3">
                                             <button class="default-btn show-btn" id="{{ research_question.id }}">مشاهده
                                             </button>
                                         </div>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-9">
                                             <div class="row">
                                                 <div class="col-6">
                                                     <div class="date text-center">
@@ -114,7 +114,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-3">
                                             <button class="default-btn show-btn" id="{{ research_question.id }}">مشاهده
                                             </button>
                                         </div>
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-9">
                                             <div class="row">
                                                 <div class="col-6">
                                                     <div class="date text-center">
@@ -151,7 +151,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-md-6 col-3">
                                             <button class="default-btn show-btn" id="{{ research_question.id }}">مشاهده
                                             </button>
                                         </div>
