--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="box-body">
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-md-6 col-8">
                                     <div class="row">
                                         <div class="col-6">
                                             <div class="date text-center">
@@ -52,7 +52,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-md-6 col-4">
                                     <button class="default-btn show-btn new-review-request">ارتقا نمره</button>
                                 </div>
                             </div>
