change page ui and cards 6

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -161,7 +161,7 @@
         {#var scientific_form = "{{ scientific_form }}";#}
     </script>
 </form>
-
+<script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
 <script type="text/javascript" src="{% static 'expert/js/script-functions.js' %}"></script>
 <script type="text/javascript" src="{% static 'expert/js/script.js' %}"></script>
 </body>
