--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -1,7 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="fixed-back initial-information" {% if request.user.expertuser.status == 'signed_up' %}
-     style="display: block" {% endif %}>
+<div class="fixed-back initial-information {% if request.user.expertuser.status == 'signed_up' %}show{% endif %}">
     <div class="card text-right">
         <div class="card-head">اطلاعات اولیه</div>
         <div class="container">
@@ -20,7 +19,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 {#for adding error add class "error" to input or textarea then add following div after that#}
                                 <label for="FirstName">نام</label>
                                 {% if form.first_name.errors %}
@@ -32,7 +31,7 @@
                                     <span class="error-body">{% render_field form.first_name.errors %}</span>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <label for="LastName">نام خانوادگی</label>
                                 {% if form.last_name.errors %}
                                     {{ form.last_name|attr:"id:LastName"|attr:"class:error w-100" }}
@@ -45,7 +44,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-md-8">
                                 <label for="Field">حوزه تخصصی</label>
                                 {% if form.special_field.errors %}
                                     {{ form.special_field|attr:"id:Field"|attr:"class:error w-100" }}
@@ -56,9 +55,7 @@
                                     <span class="error-body">{% render_field form.special_field.errors %}</span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-md-4">
                                 <label for="MelliCode">کد ملی</label>
                                 {% if form.melli_code.errors %}
                                     {{ form.melli_code|attr:"id:MelliCode"|attr:"class:error w-100" }}
@@ -71,10 +68,10 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 rankDiv">
+                            <div class="col-md-6 rankDiv">
                                 <label class="rankLabel" for="rank">مرتبه علمی</label>
                                 <select id="rank" name="scientific_rank">
-                                    <option selected dir="rtl">انتخاب کنید ...</option>
+                                    <option selected dir="rtl" disabled>انتخاب کنید ...</option>
                                     <option value="1">مربی</option>
                                     <option value="2">استادیار</option>
                                     <option value="3">دانشیار</option>
@@ -86,10 +83,7 @@
                                     <span class="error-body">{% render_field form.scientific_rank.errors %}</span>
                                 </div>
                             </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-md-6">
                                 <label for="Uni">دانشگاه محل فعالیت</label>
                                 {% if form.university.errors %}
                                     {{ form.university|attr:"id:Uni"|attr:"class:error w-100" }}
@@ -105,7 +99,7 @@
                             <div class="col-lg-12">
                                 <label for="Address">آدرس</label>
                                 {% if form.address.errors %}
-                                    {{ form.address|attr:"id:Address"|attr:"class:error w-100" }}
+                                    {{ form.address|attr:"id:Address"|attr:"class:error w-100"|attr:"rows: 4" }}
                                 {% else %}
                                     {{ form.address|attr:"id:Address"|attr:"class:w-100" }}
                                 {% endif %}
@@ -116,7 +110,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <label for="HomeNum">تلفن منزل</label>
                                 {% if form.home_number.errors %}
                                     {{ form.home_number|attr:"id:HomeNum"|attr:"class:error w-100" }}
@@ -127,7 +121,7 @@
                                     <span class="error-body">{% render_field form.home_number.errors %}</span>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <label for="PhoneNum">تلفن همراه</label>
                                 {% if form.phone_number.errors %}
                                     {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100" }}
