--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="fixed-back initial-information" style="display: block">
+<div class="fixed-back initial-information show">
     <div class="card text-right">
         <div class="card-head">اطلاعات اولیه</div>
             <div class="container">
@@ -26,26 +26,24 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <label for="id_registration_number">شماره ثبت</label>
                                     {% render_field form.registration_number class+="w-100" %}
                                     {% render_field form.registration_number.errors %}
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <label for="id_date_of_foundation">سال تاسیس</label>
                                     {% render_field form.date_of_foundation class+="w-100" %}
                                     {% render_field form.date_of_foundation.errors %}
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-lg-7">
                                     <label for="id_research_field">حوزه فعالیت</label>
                                     {% render_field form.research_field class+="w-100" %}
                                     {% render_field form.research_field.errors %}
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12 rankDiv">
+                                <div class="col-lg-5 rankDiv">
                                     <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
                                     <select id="id_industry_type" name="industry_type" class="w-100">
                                         <option dir="rtl">انتخاب کنید ...</option>
@@ -63,12 +61,12 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <label for="id_phone_number">تلفن</label>
                                     {% render_field form.phone_number class+="w-100" %}
                                     {% render_field form.phone_number.errors %}
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <label for="id_email_address">پست الکترونیکی</label>
                                     {% render_field form.email_address class+="w-100" %}
                                     {% render_field form.email_address.errors %}
