--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -25,8 +25,7 @@
                                 </label>
                                 <img
                                         {% if user.industryuser.industryform.photo %}
-                                            src="/media/{{ user.industryuser.industryform.name }}/
-{{ user.industryuser.industryform.photo.name }}"
+                                            src="/media/{{ user.industryuser.industryform.photo.name }}"
                                         {% else %}
                                             src="{% static 'industry/img/profile.jpg' %}"
                                         {% endif %}
